@@ -9,7 +9,6 @@ import static org.hamcrest.CoreMatchers.is;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThat;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 
@@ -31,17 +30,18 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
 
+import io.imunity.rest.api.types.basic.RestAttributeStatement;
+import io.imunity.rest.api.types.basic.RestGroup;
+import io.imunity.rest.api.types.basic.RestGroupContents;
+import io.imunity.rest.api.types.basic.RestGroupProperty;
+import io.imunity.rest.api.types.basic.RestI18nString;
 import pl.edu.icm.unity.Constants;
 import pl.edu.icm.unity.JsonUtil;
 import pl.edu.icm.unity.base.utils.Log;
 import pl.edu.icm.unity.stdext.identity.UsernameIdentity;
-import pl.edu.icm.unity.types.basic.AttributeStatement;
-import pl.edu.icm.unity.types.basic.AttributeStatement.ConflictResolution;
 import pl.edu.icm.unity.types.basic.EntityParam;
 import pl.edu.icm.unity.types.basic.Group;
-import pl.edu.icm.unity.types.basic.GroupContents;
 import pl.edu.icm.unity.types.basic.GroupMember;
-import pl.edu.icm.unity.types.basic.GroupProperty;
 import pl.edu.icm.unity.types.basic.IdentityTaV;
 
 /**
@@ -60,9 +60,10 @@ public class TestGroupsManagement extends RESTAdminTestBase
 			assertEquals(Status.NO_CONTENT.getStatusCode(), response.getCode());
 		}
 		HttpGet getGroupContents = new HttpGet("/restadm/v1/group/%2F");
+
 		String contents = client.execute(host, getGroupContents, getClientContext(host), new BasicHttpClientResponseHandler());
-		GroupContents groupContent = JsonUtil.parse(contents, GroupContents.class);
-		assertThat(groupContent.getSubGroups().contains("/subgroup"), is(true));
+		RestGroupContents groupContent = JsonUtil.parse(contents, RestGroupContents.class);
+		assertThat(groupContent.subGroups.contains("/subgroup"), is(true));
 	}
 	
 	@Test
@@ -81,23 +82,34 @@ public class TestGroupsManagement extends RESTAdminTestBase
 		HttpGet getGroupContents = new HttpGet("/restadm/v1/group/%2F");
 		ClassicHttpResponse response = client.executeOpen(host, getGroupContents, getClientContext(host));
 		String contents = EntityUtils.toString(response.getEntity());
+
 		assertEquals(contents, Status.OK.getStatusCode(), response.getCode());
-		GroupContents groupContent = JsonUtil.parse(contents, GroupContents.class);
-		assertThat(groupContent.getSubGroups().contains("/g1"), is(true));
+		RestGroupContents groupContent = JsonUtil.parse(contents, RestGroupContents.class);
+		assertThat(groupContent.subGroups.contains("/g1"), is(true));
+
 		
 		getGroupContents = new HttpGet("/restadm/v1/group/%2Fg1");
 		response = client.executeOpen(host, getGroupContents, getClientContext(host));
 		String contents2 = EntityUtils.toString(response.getEntity());
+
 		assertEquals(contents, Status.OK.getStatusCode(), response.getCode());
-		groupContent = JsonUtil.parse(contents2, GroupContents.class);
-		assertThat(groupContent.getSubGroups().contains("/g1/g2"), is(true));
+		groupContent = JsonUtil.parse(contents2, RestGroupContents.class);
+		assertThat(groupContent.subGroups.contains("/g1/g2"), is(true));
 	}
 	
 	@Test
 	public void addedGroupsWithPropertiesAreReturned() throws Exception
 	{
-		Group groupToAdd1 = new Group("/g1");
-		groupToAdd1.setProperties(Arrays.asList(new GroupProperty("k1", "v1")));
+		RestGroup groupToAdd1 = RestGroup.builder()
+				.withPath("/g1")
+				.withDisplayedName(RestI18nString.builder()
+						.withDefaultValue("/g1")
+						.build())
+				.withProperties(List.of(RestGroupProperty.builder()
+						.withKey("k1")
+						.withValue("v1")
+						.build()))
+				.build();
 
 		HttpPost addGroups = new HttpPost("/restadm/v1/groups");
 		String jsonString = JsonUtil.toJsonString(Lists.newArrayList(groupToAdd1));
@@ -109,9 +121,11 @@ public class TestGroupsManagement extends RESTAdminTestBase
 		HttpGet	getGroupContents = new HttpGet("/restadm/v1/group/%2Fg1/meta");
 		ClassicHttpResponse response = client.executeOpen(host, getGroupContents, getClientContext(host));
 		String contents = EntityUtils.toString(response.getEntity());
+
 		assertEquals(contents, Status.OK.getStatusCode(), response.getCode());
-		Group group = JsonUtil.parse(contents, Group.class);
-		assertThat(group.getProperties().get("k1").value, is("v1"));
+		RestGroup group = JsonUtil.parse(contents, RestGroup.class);
+		assertThat(group.properties.get(0).value, is("v1"));
+		assertThat(group.properties.get(0).key, is("k1"));
 	}
 
 
@@ -128,9 +142,10 @@ public class TestGroupsManagement extends RESTAdminTestBase
 
 		HttpGet getGroupContents =
 			new HttpGet("/restadm/v1/group/" + encodedSlash + "subgroup1" + encodedSlash + "subgroup2");
+
 		String contents = client.execute(host, getGroupContents, getClientContext(host), new BasicHttpClientResponseHandler());
-		GroupContents groupContent = JsonUtil.parse(contents, GroupContents.class);
-		assertThat(groupContent.getSubGroups().contains("/subgroup1/subgroup2/subgroup3"), is(true));
+		RestGroupContents groupContent = JsonUtil.parse(contents, RestGroupContents.class);
+		assertThat(groupContent.subGroups.contains("/subgroup1/subgroup2/subgroup3"), is(true));
 	}
 
 	@Test
@@ -148,20 +163,25 @@ public class TestGroupsManagement extends RESTAdminTestBase
 
 		HttpGet getGroupContents = new HttpGet("/restadm/v1/group/%2F");
 		String contents = client.execute(host, getGroupContents, getClientContext(host), new BasicHttpClientResponseHandler());
-		GroupContents groupContent = JsonUtil.parse(contents, GroupContents.class);
-		assertThat(groupContent.getSubGroups().contains("/subgroup"), is(false));
+		RestGroupContents groupContent = JsonUtil.parse(contents, RestGroupContents.class);
+		assertThat(groupContent.subGroups.contains("/subgroup"), is(false));
 	}
 	
 	@Test
 	public void addedAttributeStatementIsReturned() throws Exception
 	{
 		HttpPost add = new HttpPost("/restadm/v1/group/subgroup");
+
 		try(ClassicHttpResponse response = client.executeOpen(host, add, getClientContext(host))){
 			assertEquals(Status.NO_CONTENT.getStatusCode(), response.getCode());
-		}
-		
-		AttributeStatement statement = new AttributeStatement("true", "/", ConflictResolution.skip, 
-				"sys:AuthorizationRole", "eattr['name']");
+		}		
+		RestAttributeStatement statement = RestAttributeStatement.builder()
+				.withCondition("true")
+				.withResolution("skip")
+				.withExtraGroupName("/")
+				.withDynamicAttributeName("sys:AuthorizationRole")
+				.withDynamicAttributeExpression("eattr['name']")
+				.build();
 		HttpPut addStmt = new HttpPut("/restadm/v1/group/subgroup/statements");
 		String jsonString = JsonUtil.toJsonString(Lists.newArrayList(statement));
 		log.info("Statements:\n" + jsonString);
@@ -172,8 +192,9 @@ public class TestGroupsManagement extends RESTAdminTestBase
 		HttpGet getGroupContents = new HttpGet("/restadm/v1/group/subgroup/statements");
 		String contents = client.execute(host, getGroupContents, getClientContext(host), new BasicHttpClientResponseHandler());
 		log.info("Statements:\n" + contents);
-		List<AttributeStatement> groupStatements = Constants.MAPPER.readValue(contents, 
-				new TypeReference<List<AttributeStatement>>(){});
+
+		List<RestAttributeStatement> groupStatements = Constants.MAPPER.readValue(contents, 
+				new TypeReference<List<RestAttributeStatement>>(){});
 		assertThat(groupStatements.size(), is(1));
 	}
 	
